Alteração de font-size e espaçamento

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <div class="hero-landing-03">
             <div class="h-large condensed">Quem é o gustavo?</div>
             <div class="w-layout-grid grid-hero">
-               <div id="w-node-_685ab038-fe98-b4dc-c1ac-e1347f1992c1-9c1e0d35" class="uppercase-h-small">Criatividade em criar e desenvolver</div>
+               <div id="w-node-_685ab038-fe98-b4dc-c1ac-e1347f1992c1-9c1e0d35" class="uppercase-h-small">@gustax.png</div>
                <div id="w-node-_622dbe83-a395-aab1-27df-c5f93a76b295-9c1e0d35" class="uppercase-h-small center">Olá, espero que goste do que fiz aqui, pois isso é apenas um pouco do que posso oferecer.</div>
                <div id="w-node-_0af3d9b2-fba4-af18-ea81-704547f3f5ce-9c1e0d35" class="uppercase-h-small">@gustax.png</div>
             </div>
@@ -18,10 +18,10 @@
       </div>
       <div class="section sub-hero">
          <div data-w-id="0b3a7edd-5a70-7831-8e0a-071c9c950b36" class="h-xxlarge-wrapper">
-            <div class="h-xxlarge no-wrap">Gustavo santos gustavo</div>
+            <div class="h-xxlarge no-wrap">Gustavo santos gustavo Gustavo santos gustavo</div>
          </div>
          <div data-w-id="2ccc1430-d4e8-1997-2f99-c83d31aa8899" class="h-xxlarge-wrapper">
-            <div class="h-xxlarge no-wrap">Gustavo santos gustavo</div>
+            <div class="h-xxlarge no-wrap">Gustavo santos gustavo Gustavo santos gustavo</div>
          </div>
       </div>
       <div class="section bg-black">
