--- a/index.html
+++ b/index.html
@@ -67,20 +67,12 @@
          </div>
          <div class="h-large condensed text-white">
             <center>Fotos</center>
-            <div class="container">
-               <div class="box"><img src="img/img.jpg"></div>
-               <div class="box"><img src="img/img2.jpg"></div>
-               <div class="box"><img src="img/img3.jpg"></div>
-               <div class="box"><img src="img/img4.jpg"></div>
-               <div class="box"><img src="img/img5.jpg"></div>
-               <div class="box"><img src="img/img6.jpg"></div>
-               <div class="box"><img src="img/img.jpg"></div>
-               <div class="box"><img src="img/img2.jpg"></div>
-               <div class="box"><img src="img/img3.jpg"></div>
-               <div class="box"><img src="img/img4.jpg"></div>
-               <div class="box"><img src="img/img5.jpg"></div>
-               <div class="box"><img src="img/img6.jpg"></div>
-            </div>
+            <center>
+               <div class="container">
+                     <div class="box"><img src="img/img.jpg"></div>
+                     <div class="box"><img src="img/img2.jpg"></div>
+               </div>
+            </center>
          </div>
       </div>
    </div>
