Atualizando Galeria de Fotos

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
          <div class="w-layout-grid grid-capabilities">
             <div class="content-wrapper-s">
                <p class="h-reg text-white">Sobre mim</p>
-               <p class="p-large">Gustavo é estudante de Engenharia de Software em Curitiba, apaixonado por tecnologia e inovação. Com foco em desenvolvimento de software, busca contribuir para avanços na área através de projetos acadêmicos e profissionais.
+               <p class="p-large">Sou estudante de Engenharia de Software em Curitiba, apaixonado por tecnologia e inovação. Com foco em desenvolvimento de software, busca contribuir para avanços na área por meio de projetos acadêmicos e profissionais.
                </p>
             </div>
             <div id="w-node-_1814854a-c067-0c4b-ccba-8bd2bcfc4e44-9c1e0d35" class="content-wrapper-s">
@@ -65,17 +65,43 @@
                </div>
             </div>
          </div>
-         <div class="h-large condensed text-white">
-            <center>Fotos</center>
-            <center>
-               <div class="container">
-                     <div class="box"><img src="img/img.jpg"></div>
-                     <div class="box"><img src="img/img2.jpg"></div>
+         <div class="h-large condensed text-white">FOTOS</div>
+         <div class="w-layout-grid grid-gallery">
+            <div id="w-node-bc6aa149-3afe-0c3d-cf76-94f806a09d26-9c1e0d35">
+               <div class="w-dyn-list">
+                  <div role="list" class="collection-list _2 w-dyn-items">
+                     <div role="listitem" class="w-dyn-item">
+                        <a href="/team/hetfield-davis" class="team-link-wrapper w-inline-block">
+                           <div class="team-member-wrapper"><img src="/img/img.jpg" loading="lazy" alt="" sizes="(max-width: 479px) 92vw, (max-width: 767px) 88vw, (max-width: 991px) 91vw, 45vw" class="cover-image" />
+                           </div>
+                        </a>
+                     </div>
+
+                     <div role="listitem" class="w-dyn-item">
+                        <a href="/team/hetfield-davis" class="team-link-wrapper w-inline-block">
+                           <div class="team-member-wrapper"><img src="/img/img5.jpg" loading="lazy" alt="" sizes="(max-width: 479px) 92vw, (max-width: 767px) 88vw, (max-width: 991px) 91vw, 45vw" class="cover-image" />
+                           </div>
+                        </a>
+                     </div>
+
+                     <div role="listitem" class="w-dyn-item">
+                        <a href="/team/hetfield-davis" class="team-link-wrapper w-inline-block">
+                           <div class="team-member-wrapper"><img src="/img/img3.jpg" loading="lazy" alt="" sizes="(max-width: 479px) 92vw, (max-width: 767px) 88vw, (max-width: 991px) 91vw, 45vw" class="cover-image" />
+                           </div>
+                        </a>
+                     </div>
+
+                     <div role="listitem" class="w-dyn-item">
+                        <a href="/team/hetfield-davis" class="team-link-wrapper w-inline-block">
+                           <div class="team-member-wrapper"><img src="/img/img4.jpg" loading="lazy" alt="" sizes="(max-width: 479px) 92vw, (max-width: 767px) 88vw, (max-width: 991px) 91vw, 45vw" class="cover-image" />
+                           </div>
+                        </a>
+                     </div>
+                  </div>
                </div>
-            </center>
+            </div>
          </div>
       </div>
-   </div>
    </div>
    <div class="section bg-footer">
       <div data-w-id="8b89b068-e6bb-98c8-d1da-5e3c9d14dc53" class="footer-ticker-wrapper">
@@ -100,7 +126,8 @@
             </div>
             <div id="w-node-_2387a6a5-7f55-fe7f-8739-8d139dc0dd3e-9dc0dd20" class="footer-content-wrapper">
                <div id="w-node-_0196b0af-9b1e-e29c-6c93-be10eea7c3c8-9dc0dd20" class="footer-links-wrapper">
-                  <div class="p-small text-white">Me siga</div><a href="#" class="footer-link-p">Instagram</a><a href="#" class="footer-link-p">Twitter</a><a href="#" class="footer-link-p">Linkedin</a>
+                  <div class="p-small text-white">Me siga</div><a href="#" class="footer-link-p">Instagram</a><a href="#" class="footer-link-p">Twitter</a>
+                  <a href="https://www.linkedin.com/in/gustavo-moises/z" class="footer-link-p">Linkedin</a>
                </div>
             </div>
          </div>
